--- a/scorekeeper_core/pubspec.yaml
+++ b/scorekeeper_core/pubspec.yaml
@@ -1,3 +1,4 @@
+---
 name: scorekeeper_core
 description: The core library for the scorekeeper application
 version: 0.0.1-dev
@@ -7,11 +8,12 @@ environment:
   sdk: '>=2.10.0 <3.0.0'
 
 dependencies:
-  uuid: ^2.2.2
-  scorekeeper_domain:
-    path: ../scorekeeper_domain
   example_domain:
     path: ../scorekeeper_example_domain
+  logger: ^0.9.4
+  scorekeeper_domain:
+    path: ../scorekeeper_domain
+  uuid: ^2.2.2
 
 dev_dependencies:
   pedantic: ^1.9.0
