--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ jobs:
       os: linux
       script: "pub global activate mono_repo 3.4.4 && pub global run mono_repo generate --validate"
     - stage: analyzer_and_format
-      name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain; `dartfmt -n --set-exit-if-changed .`, `dartanalyzer --fatal-infos .`"
+      name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain; `dartanalyzer --fatal-infos .`"
       dart: dev
       os: linux
       env: PKGS="scorekeeper_codegen scorekeeper_core scorekeeper_domain scorekeeper_example_domain"
-      script: tool/ci.sh dartfmt dartanalyzer
+      script: tool/ci.sh dartanalyzer
     - stage: unit_test
       name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain; `pub run test`"
       dart: dev
