--- a/scorekeeper_core/mono_pkg.yaml
+++ b/scorekeeper_core/mono_pkg.yaml
@@ -6,7 +6,7 @@ dart:
 stages:
 - analyzer_and_format:
   - group:
-    - dartfmt
+    # - dartfmt
     - dartanalyzer: --fatal-infos .
 - unit_test:
   - test:
