--- a/scorekeeper_example_domain/pubspec.yaml
+++ b/scorekeeper_example_domain/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
 dev_dependencies:
   build_config: ^0.4.5
   build_runner: ^1.10.12
-  build_version: 2.0.1
+  build_verify: ^1.1.1
+  build_version: ^2.0.1
   pedantic: ^1.9.0
   scorekeeper_codegen:
     path: ../scorekeeper_codegen
