--- a/.travis.yml
+++ b/.travis.yml
@@ -15,22 +15,22 @@ jobs:
       os: linux
       script: "pub global activate mono_repo 3.4.4 && pub global run mono_repo generate --validate"
     - stage: analyzer_and_format
-      name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain; `dartanalyzer --fatal-infos .`"
+      name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain, scorekeeper_flutter; `dartanalyzer --fatal-infos .`"
       dart: dev
       os: linux
-      env: PKGS="scorekeeper_codegen scorekeeper_core scorekeeper_domain scorekeeper_example_domain"
+      env: PKGS="scorekeeper_codegen scorekeeper_core scorekeeper_domain scorekeeper_example_domain scorekeeper_flutter"
       script: tool/ci.sh dartanalyzer
     - stage: unit_test
-      name: "PKGS: scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain; `pub run test`"
+      name: "PKGS: scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain, scorekeeper_flutter; `pub run test`"
       dart: dev
       os: linux
-      env: PKGS="scorekeeper_core scorekeeper_domain scorekeeper_example_domain"
+      env: PKGS="scorekeeper_core scorekeeper_domain scorekeeper_example_domain scorekeeper_flutter"
       script: tool/ci.sh test_0
     - stage: ensure_build
-      name: "PKG: scorekeeper_example_domain; `pub run test --run-skipped -t presubmit-only test/ensure_build_test.dart`"
+      name: "PKGS: scorekeeper_example_domain, scorekeeper_flutter; `pub run test --run-skipped -t presubmit-only test/ensure_build_test.dart`"
       dart: dev
       os: linux
-      env: PKGS="scorekeeper_example_domain"
+      env: PKGS="scorekeeper_example_domain scorekeeper_flutter"
       script: tool/ci.sh test_1
 
 stages:
@@ -45,3 +45,4 @@ cache:
     - scorekeeper_core/.dart_tool/build
     - scorekeeper_domain/.dart_tool/build
     - scorekeeper_example_domain/.dart_tool/build
+    - scorekeeper_flutter/.dart_tool/build
