--- a/scorekeeper_flutter/pubspec.yaml
+++ b/scorekeeper_flutter/pubspec.yaml
@@ -23,11 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  scorekeeper_core:
+    path: ../scorekeeper_core
+  # TODO: why doesn't the scorekeeper_example_domain bring this transitive dependency along?
+  scorekeeper_domain:
+    path: ../scorekeeper_domain
+  scorekeeper_example_domain:
+    path: ../scorekeeper_example_domain
+  uuid: ^2.2.2
 
 dev_dependencies:
   flutter_test:
