ScorekeeperService verder uitwerken

--- a/scorekeeper_flutter/pubspec.yaml
+++ b/scorekeeper_flutter/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.1
   flutter:
     sdk: flutter
+  ordered_set: 2.0.1
   scorekeeper_core:
     path: ../scorekeeper_core
   # TODO: why doesn't the scorekeeper_example_domain bring this transitive dependency along?
