--- a/scorekeeper_flutter/android/app/src/main/AndroidManifest.xml
+++ b/scorekeeper_flutter/android/app/src/main/AndroidManifest.xml
@@ -41,7 +41,5 @@
 
     </application>
 
-    <uses-permission
-            android:name="android.permission.INTERNET"
-            android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
