--- a/scorekeeper_flutter/pubspec.yaml
+++ b/scorekeeper_flutter/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
 dev_dependencies:
   flutter_driver:
     sdk: flutter
-#  flutter_test:
-#    sdk: flutter
+  flutter_test:
+    sdk: flutter
   integration_test:
     sdk: flutter
   test: ^1.14.4
