--- a/scorekeeper_codegen/pubspec.yaml
+++ b/scorekeeper_codegen/pubspec.yaml
@@ -8,14 +8,14 @@ environment:
   sdk: '>=2.10.0 <3.0.0'
 
 dependencies:
-  analyzer: ^0.41.1
+  analyzer: ^1.3.0
   # dependencies required for generating code using the build package
-  build: ^1.6.1
-  code_builder: 3.5.0
-  dart_style: 1.3.10
+  build: ^2.0.0
+  code_builder: ^3.7.0
+  dart_style: ^2.0.0
   scorekeeper_domain:
     path: ../scorekeeper_domain
-  source_gen: ^0.9.10+1
+  source_gen: ^1.0.0
 
 dev_dependencies:
   pedantic: ^1.9.0
