--- a/scorekeeper_core/pubspec.yaml
+++ b/scorekeeper_core/pubspec.yaml
@@ -13,10 +13,10 @@ dependencies:
     path: ../scorekeeper_domain
   scorekeeper_example_domain:
     path: ../scorekeeper_example_domain
-  uuid: ^2.2.2
+  uuid: ^3.0.3
 
 dev_dependencies:
   ogurets: ^3.2.0
   pedantic: ^1.9.0
   test: ^1.14.4
-  test_coverage: ^0.5.0
+  # test_coverage: ^0.5.0
