--- a/scorekeeper_example_domain/pubspec.yaml
+++ b/scorekeeper_example_domain/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   scorekeeper_domain:
     path: ../scorekeeper_domain
-  uuid: ^2.2.2
+  uuid: ^3.0.3
 
 
 dev_dependencies:
@@ -22,4 +22,4 @@ dev_dependencies:
   scorekeeper_codegen:
     path: ../scorekeeper_codegen
   test: ^1.14.4
-  test_coverage: ^0.5.0
+  # test_coverage: ^0.5.0
