--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ after_failure:
 
 jobs:
   include:
-    - stage: analyzer_and_format
-      name: mono_repo self validate
-      os: linux
-      script: "pub global activate mono_repo 3.4.7 && pub global run mono_repo generate --validate"
+#    - stage: analyzer_and_format
+#      name: mono_repo self validate
+#      os: linux
+#      script: "pub global activate mono_repo 3.4.7 && pub global run mono_repo generate --validate"
     - stage: analyzer_and_format
       name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain; `dartanalyzer --fatal-infos .`"
       dart: dev
