--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ branches:
 after_failure:
   - tool/report_failure.sh
 
+before_script:
+  - git clone https://github.com/flutter/flutter.git -b master
+  - ./flutter/bin/flutter doctor
+
 jobs:
   include:
 #    - stage: analyzer_and_format
