--- a/.travis.yml
+++ b/.travis.yml
@@ -9,24 +9,17 @@ branches:
 after_failure:
   - tool/report_failure.sh
 
-before_script:
-  - git clone https://github.com/flutter/flutter.git ${TRAVIS_HOME}/flutter-sdk -b master
-  - export FLUTTER_SDK="${TRAVIS_HOME}/flutter-sdk"
-  - export PATH="$FLUTTER_SDK/bin:$PATH"
-  - export NO_PROXY=localhost,127.0.0.1
-  - flutter doctor
-
 jobs:
   include:
-#    - stage: analyzer_and_format
-#      name: mono_repo self validate
-#      os: linux
-#      script: "pub global activate mono_repo 3.4.7 && pub global run mono_repo generate --validate"
     - stage: analyzer_and_format
-      name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain; `dartanalyzer --fatal-infos .`"
+      name: mono_repo self validate
+      os: linux
+      script: "pub global activate mono_repo 3.4.7 && pub global run mono_repo generate --validate"
+    - stage: analyzer_and_format
+      name: "PKGS: scorekeeper_codegen, scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain, scorekeeper_flutter; `dartanalyzer --fatal-infos .`"
       dart: dev
       os: linux
-      env: PKGS="scorekeeper_codegen scorekeeper_core scorekeeper_domain scorekeeper_example_domain"
+      env: PKGS="scorekeeper_codegen scorekeeper_core scorekeeper_domain scorekeeper_example_domain scorekeeper_flutter"
       script: tool/ci.sh dartanalyzer
     - stage: unit_test
       name: "PKGS: scorekeeper_core, scorekeeper_domain, scorekeeper_example_domain, scorekeeper_flutter; `pub run test`"
