--- a/.travis.yml
+++ b/.travis.yml
@@ -10,22 +10,12 @@ branches:
 after_failure:
   - tool/report_failure.sh
 
-env:
-  global:
-    - DARTSDK=./flutter/bin/cache/dart-sdk/bin
-    - DARTFMT=$DARTSDK/dartfmt
-    - FLUTTER=./flutter/bin/flutter
-    - FLUTTER_UP=../flutter/bin/flutter
-    - FLUTTER_GITHUB=https://github.com/flutter/flutter.git
-    - CODECOV=https://codecov.io/bash
-    - PACKAGES=packages
-    - APP=app
-    - ANDROID_API=28
-
-install:
-  - git clone $FLUTTER_GITHUB -b stable --depth 1
-  - $FLUTTER doctor
-  - $FLUTTER pub get
+before_script:
+  - git clone https://github.com/flutter/flutter.git ${TRAVIS_HOME}/flutter-sdk -b master
+  - export FLUTTER_SDK="${TRAVIS_HOME}/flutter-sdk"
+  - export PATH="$FLUTTER_SDK/bin:$PATH"
+  - export NO_PROXY=localhost,127.0.0.1
+  - flutter doctor
 
 jobs:
   include:
