--- a/mono_repo.yaml
+++ b/mono_repo.yaml
@@ -13,7 +13,12 @@ travis:
     - develop
     - firebase-auth
     - travis-ci-flutter-support
-  # Example:
+  before_script:
+    - git clone https://github.com/flutter/flutter.git ${TRAVIS_HOME}/flutter-sdk -b master
+    - export FLUTTER_SDK="${TRAVIS_HOME}/flutter-sdk"
+    - export PATH="$FLUTTER_SDK/bin:$PATH"
+    - export NO_PROXY=localhost,127.0.0.1
+    - flutter doctor
   after_failure:
     - tool/report_failure.sh
 
