Refactoring of DomainEvent, removed separte ID class, created factory to inject, ...

--- a/mono_repo.yaml
+++ b/mono_repo.yaml
@@ -11,6 +11,7 @@ travis:
   branches:
     - master
     - develop
+    - dev
     - firebase-auth
     - travis-ci-flutter-support
   before_script:
