EventStore implementation using "moor" (sqlite) database (had to cover for some codegen issues...)

--- a/scorekeeper_domain/build.yaml
+++ b/scorekeeper_domain/build.yaml
@@ -4,6 +4,8 @@
 targets:
   $default:
     builders:
+  scorekeeper_domain:
+    builders:
       handler_generator:
         generate_for:
           - lib/src/scorable.dart
