Trying out the JsonSerializable route... But getting stuck on the code generation. Either include @JsonSerializable and generate code (twice), or try to hi-jack the code generation for our own purpose.

--- a/scorekeeper_domain/build.yaml
+++ b/scorekeeper_domain/build.yaml
@@ -15,6 +15,9 @@ targets:
       aggregate_dto_factory_generator:
         generate_for:
           - lib/src/scorable.dart
+      domain_serializer_generator:
+        generate_for:
+          - lib/src/scorable.dart
 
 builders:
   handler_generator:
@@ -33,5 +36,11 @@ builders:
     import: "package:scorekeeper_codegen/generator.dart"
     builder_factories: ["aggregateDtoFactoryGenerator"]
     build_extensions: {".dart": [".f.dart"]}
+    auto_apply: dependents
+    build_to: source
+  domain_serializer_generator:
+    import: "package:scorekeeper_codegen/generator.dart"
+    builder_factories: ["serializerGenerator"]
+    build_extensions: {".dart": [".s.dart"]}
     auto_apply: dependents
     build_to: source
