--- a/scorekeeper_codegen/pubspec.yaml
+++ b/scorekeeper_codegen/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  analyzer: ^1.3.0
+  analyzer: ^1.5.0
   # dependencies required for generating code using the build package
   build: ^2.0.0
   code_builder: ^3.7.0
@@ -16,7 +16,11 @@ dependencies:
   scorekeeper_domain:
     path: ../scorekeeper_domain
   source_gen: ^1.0.0
+  json_annotation: ^4.0.1
+  json_serializable: ^4.1.3
+  build_resolvers:
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.4
+
