Refactor ALL THE THINGS!!!  - Split up domain packages, setup for multi-domain support (ie: Scorable + Contest) but not yet working this out any further for now  - Removed JsonSerializable dependencies, we're going for Protobuf as originally intended...

--- a/scorekeeper_domain/build.yaml
+++ b/scorekeeper_domain/build.yaml
@@ -8,16 +8,16 @@ targets:
     builders:
       handler_generator:
         generate_for:
-          - lib/src/scorable.dart
+          - lib/src/contest.dart
       aggregate_dto_generator:
         generate_for:
-          - lib/src/scorable.dart
+          - lib/src/contest.dart
       aggregate_dto_factory_generator:
         generate_for:
-          - lib/src/scorable.dart
+          - lib/src/contest.dart
       domain_serializer_generator:
         generate_for:
-          - lib/src/scorable.dart
+          - lib/src/contest.dart
 
 builders:
   handler_generator:
