--- a/scorekeeper_codegen/pubspec.yaml
+++ b/scorekeeper_codegen/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   scorekeeper_domain:
     path: ../scorekeeper_domain
   source_gen: ^1.0.0
-  json_annotation: ^4.0.1
-  json_serializable: ^4.1.3
+#  json_annotation: ^4.0.1
+#  json_serializable: ^4.1.3
   build_resolvers:
 
 dev_dependencies:
