--- a/scorekeeper_domain_contest/pubspec.yaml
+++ b/scorekeeper_domain_contest/pubspec.yaml
@@ -8,10 +8,10 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  protobuf: 2.0.0
   scorekeeper_domain:
     path: ../scorekeeper_domain
   uuid: ^3.0.3
-  protobuf: 2.0.0
 
 
 dev_dependencies:
@@ -22,5 +22,7 @@ dev_dependencies:
   pedantic: ^1.9.0
   scorekeeper_codegen:
     path: ../scorekeeper_codegen
+  scorekeeper_core:
+    path: ../scorekeeper_core
   test: ^1.14.4
   # test_coverage: ^0.5.0
