--- a/scorekeeper_core/pubspec.yaml
+++ b/scorekeeper_core/pubspec.yaml
@@ -12,8 +12,6 @@ dependencies:
   ordered_set: ^3.0.0
   scorekeeper_domain:
     path: ../scorekeeper_domain
-  scorekeeper_domain_scorable:
-    path: ../scorekeeper_domain_scorable
   uuid: ^3.0.3
 
 dev_dependencies:
@@ -21,3 +19,6 @@ dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.4
   # test_coverage: ^0.5.0
+  # Only for testing purposes...
+  scorekeeper_domain_scorable:
+    path: ../scorekeeper_domain_scorable
